@@ -1,0 +1,15 @@
+<div xmlns="http://www.w3.org/1999/xhtml" 
+     xmlns:tal="http://xml.zope.org/namespaces/tal"
+     xmlns:metal="http://xml.zope.org/namespaces/metal"
+     metal:use-macro="api.generic_layout.macros['master']">
+
+  <div metal:fill-slot="content">
+
+    <div class="deleteMessage">
+      <p>Do you really want to delete <strong> ${api.context.title} </strong>?</p>
+      <p><a href="?confirm=1" class="context">ok</a>&#160;<a href="${api.here_url}"
+          class="standalone">cancel</a></p>
+    </div>
+
+  </div>
+</div>
