@@ -10,7 +10,7 @@
 # WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License along
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
@@ -47,9 +47,6 @@ class TestDeleteResourceView(unittest.TestCase):
         request = testing.DummyRequest(params={'confirm':'1'})
         response = self._callFUT(context, request)
         self.assertEqual(response.status, '302 Found')
-        self.assertEqual(response.location, 
+        self.assertEqual(response.location,
                          'http://example.com/?status_message=Deleted+Child')
         self.failIf('child' in parent)
-        
-        
-
